[tool.poetry]
name = "konbinein"
version = "0.1.0"
description = ""
authors = ["kinoubenkyou <kinoubenkyou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
pre-commit = "^2.20.0"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
factory-boy = "^3.2.1"
ipdb = "^0.13.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
preview = true

[tool.isort]
profile = "black"
